components/buttons/style.css
/********** Resets **********/

*, *:after, *:before {
	box-sizing: border-box;
}
html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    vertical-align:baseline;
    background:transparent;
}

.clearfix:after {
   content: " "; 
   visibility: hidden;
   display: block;
   height: 0;
   clear: both;
}

/********** Base Styles **********/

html {
	font-size: 62.5%;
}

body {
	font-family: Lato, sans-serif;
	font-size: 1.6em;
}

h1 {
	font-size: 3em;
	font-weight: normal;
}

h2 {
	font-size: 2.6em;
	font-weight: normal;
}

.row{
	width: 96%;
	max-width: 960px;
	margin: 0 auto;
}

/********** Header Styles ***********/

#header-wrap{
	background: #6AB47B;
	border-top: 5px solid #4C8158;
}

/********** Navigation Styles **********/

#main-nav {
    float: right;
    display: inline-block;
    position: relative;
}

#main-nav li {
	float:left;
	text-decoration: none;
	list-style: none;
	display: inline-block;
	-webkit-transition: all .5s linear;
    -moz-transition: all .5s linear;
    -o-transition: all .5s linear;
    transition: all .5s linear;
}

#main-nav li:hover {
    background: #DAF5E0;
}

#main-nav li:hover .sub-nav {
	    display: block;
}

#main-nav li a {
	text-decoration: none;
	color: #fff;
	padding: 15px 20px;
    display: inline-block;
}

.sub-nav{
	display: none;
	position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    top: 100%;
}

.sub-nav li a {
	min-width: 160px;
    padding: 15px 20px;
    display: inline-block;
    padding: 0;
    margin: 0;
    float: none;
    color: #000;
}

.sub-nav li a:hover {
	border-left: 5px solid #6AB47B;
	border-right: 5px solid #6AB47B;
	-webkit-transition: all .2s linear;
    -moz-transition: all .2s linear;
    -o-transition: all .2s linear;
    transition: all .2s linear;
}

#main-nav ul.sub-nav li:hover {
	background: #fff;
}

#main-nav ul li:hover a{
		color: #333;
}

/********** Main Content Styles **********/

.page-title-wrap{
	background: #DAF5E0;
}

#page-title{
	text-align: center;
	padding: 5%;
	color: #2F3424;
}

#site-title {
	font-size: 2em;
	color: #fff;
	text-align: center;
	font-family: 'Lato', sans-serif;
	display: inline-block;
	padding: 5px;
}

#main-wrap{
	background: url(landscape-2.jpg) no-repeat center center fixed;
	min-height: 100vh;
	padding: 0 0 5%;
}

#content{
	margin-top: 5%;
	padding: 2%;
	background: rgba(255,255,255,.6);
}

.component-container{
	background: #fff;
	width: 32%;
	float: left;
	margin-right: 2%;
	border: 1px solid #DAF5E0;
	padding: 5%;
	text-align: center;
	border-radius: 4px;
	position: relative;
	box-shadow: 2px 2px 22px #e8e8e8;;
	-webkit-transition: all 3s linear;
	-moz-transition: all 3s linear;
	-ms-transition: all 3s linear;
	-o-transition: all 3s linear;
	transition: all 3s linear;
}

.component-container h2 {
	color: #4C8158;
	font-size: 1.6em;
	text-decoration: none;
	cursor: pointer;
}

.component-view{    
	display: block;
	position: absolute;
	opacity: 0;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background: rgba(76, 129, 88, .7);
    color: #fff;
    font-size: 2em;
    border-radius: 4px;
    box-shadow: 2px 2px 22px #DAF5E0;
    -webkit-transition: all .5s ease;
	-moz-transition: all .5s ease;
	-ms-transition: all .5s ease;
	-o-transition: all .5s ease;
	transition: all .5s ease;
}

.component-container:hover .component-view {
	opacity: 1;}

.component-view a {
	display: block;
	padding: 15% 0 0;
	height: 100%;
	text-decoration: none;
	color: #fff;
}

/********** Footer Styles **********/

#footer-wrap {
	background: #DAF5E0;
	text-align: center;
	padding: 20px 0 20px;  
}

